--- a/templates/accounts/activate_user.html
+++ b/templates/accounts/activate_user.html
@@ -9,6 +9,6 @@
 <form method="POST">
     {% csrf_token %}
     {% include "includes/bootstrap_form.html" with form=activate_form %}
-    <input type="submit" value="ユーザーを有効化する" class="btn btn-primary">
+    <input type="submit" value="ユーザーを有効化する" class="btn btn-outline-primary mb-2">
 </form><br>
 {% endblock %}
