--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -9,6 +9,6 @@
 <form method="POST">
     {% csrf_token %}
     {% include "includes/bootstrap_form.html" with form=password_change_form %}
-    <input type="submit" value="パスワード更新" class="btn btn-primary">
+    <input type="submit" value="パスワード更新" class="btn btn-outline-primary mb-2">
 </form><br>
 {% endblock %}
