--- a/templates/accounts/user_edit.html
+++ b/templates/accounts/user_edit.html
@@ -12,7 +12,7 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% include "includes/bootstrap_form.html" with form=user_edit_form %}
-    <input type="submit" value="更新" class="btn btn-primary">
+    <input type="submit" value="更新" class="btn btn-outline-primary mb-2">
 </form><br>
 
 <a href="{% url 'accounts:change_password' %}" class="btn btn-outline-danger">パスワード変更</a>
