--- a/templates/household/regist.html
+++ b/templates/household/regist.html
@@ -29,13 +29,13 @@
 
     {% include "includes/bootstrap_field.html" with field=form.payer %}
 
-    <button type="submit" class="btn btn-primary">保存</button>
+    <button type="submit" class="btn btn-outline-primary">保存</button>
     {% if form.instance.pk %}
         <a href="{% url 'household:delete' form.instance.pk %}" class="btn btn-outline-danger">削除</a>
     {% endif %}
 </form><br>
 
-<a href="{% url 'household:list' %}" class="btn btn-outline-primary mb-2">一覧に戻る</a><br>
+<a href="{% url 'household:list' %}" class="btn btn-outline-secondary mb-2">一覧に戻る</a><br>
 
 {% include "includes/calculator_modal.html" %}
 <script>
