--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- カスタムCSS -->
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+
     {% block extra_head %}{% endblock %}
 </head>
 <body>
