--- a/templates/variablecosts/delete_confirm.html
+++ b/templates/variablecosts/delete_confirm.html
@@ -15,6 +15,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-outline-danger">削除する</button>
-    <a href="{% url 'household:list' %}" class="btn btn-outline-secondary">キャンセル</a>
+    <a href="{% url 'variablecosts:list' %}" class="btn btn-outline-secondary">キャンセル</a>
 </form>
 {% endblock %}
