fixedcostsアプリの追加

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                             <a class="nav-link text-white" href="{% url 'variablecosts:list' %}">家計簿(変動費)</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'fixedcosts:list' %}">家計簿(固定費)</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="{% url 'accounts:info' %}">ユーザー情報</a>
                         </li>
                         <li class="nav-item">
