home画面い未入力の固定費も追加

--- a/templates/fixedcosts/list.html
+++ b/templates/fixedcosts/list.html
@@ -82,8 +82,8 @@
         </tr>
         <tr><td>電気代</td><td class="text-end">{{ fixed_cost.electricity|default:"-"|intcomma }} 円</td></tr>
         <tr><td>ガス代</td><td class="text-end">{{ fixed_cost.gas|default:"-"|intcomma }} 円</td></tr>
-        <tr><td>インターネット代</td><td class="text-end">{{ fixed_cost.internet|default:"-"|intcomma }} 円</td></tr>
-        <tr><td>サブスクリプション代</td><td class="text-end">{{ fixed_cost.subscriptions|default:"-"|intcomma }} 円</td></tr>
+        <tr><td>ネット代</td><td class="text-end">{{ fixed_cost.internet|default:"-"|intcomma }} 円</td></tr>
+        <tr><td>サブスク代</td><td class="text-end">{{ fixed_cost.subscriptions|default:"-"|intcomma }} 円</td></tr>
         <tr class="table-secondary">
           <td class="fw-bold">合計</td>
           <td class="text-end fw-bold">{{ total_cost|intcomma }} 円</td>
