出費合計にも予算を追加

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <!-- 合計金額の表示 -->
 <div class="card mb-4 shadow-sm">
     <div class="card-body">
-        <h5 class="card-title">今月の出費合計</h5>
+        <h5 class="card-title">今月の出費合計 (予算 : 240,000円)</h5>
         <p class="card-text fs-4 fw-bold text-primary">{{ total_amount|intcomma }} 円</p>
         {% if total_fixed_cost %}
         <ul class="list-group">
