--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
                             <a class="nav-link text-white" href="{% url 'fixedcosts:list' %}">家計簿(固定費)</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="{% url 'largecosts:list' %}">大型費用</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="{% url 'accounts:info' %}">ユーザー情報</a>
                         </li>
                         <li class="nav-item">
