予算の編集画面をユーザー情報に追加

--- a/templates/accounts/user_info.html
+++ b/templates/accounts/user_info.html
@@ -9,5 +9,6 @@
 
 <a href="{% url 'accounts:regist' %}" class="btn btn-outline-primary mb-2">新規ユーザー登録</a><br>
 <a href="{% url 'accounts:edit' %}" class="btn btn-outline-secondary mb-2">ユーザー情報変更</a><br>
+<a href="{% url 'core:edit_budget' %}" class="btn btn-outline-warning mb-2">予算情報変更</a><br>
 <a href="{% url 'accounts:change_password' %}" class="btn btn-outline-danger">パスワード変更</a>
 {% endblock %}
